compiler/tests/fixtures/invalid/semantics/rename_with_other_fields.viv
// A renaming role that also specifies other fields.
// Should be rejected: renames must be the only field on a role.

template action meeting:
    roles:
        @host:
            as: initiator
        @attendee:
            as: recipient

action council from meeting:
    join roles:
        @delegate:
            as: character, partner
            renames: @attendee
